removes arraylist overhead from streambuffer